--- a/Views/Games/Index.cshtml
+++ b/Views/Games/Index.cshtml
@@ -24,6 +24,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Genre)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Platforms)
+            <th/>
             <th></th>
         </tr>
     </thead>
@@ -34,13 +37,23 @@
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Image)
+                    <img src="@Html.DisplayFor(modelItem => item.Image)"  alt="GameImage" height="200">
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.ReleaseYear)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Genre.Id)
+                @Html.DisplayFor(modelItem => item.Genre.Name)
+            </td>
+            <td>
+                @if(item.Platforms != null){
+                    @foreach (var platform in item.Platforms)
+                    {
+                    
+                        <span class="badge bg-primary">@platform.Name</span>
+                                      
+                    }
+                }                
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
